@@ -1,3 +1,6 @@
+VER_004
+- Added also support for x86 and armv7l in setup.sh
+
 VER_003
 - Changed setup file to point to official VOSK language models
 
